# cpp-project-starter

./: .bazelrc  .clang-format  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  format.sh
.github/workflows/: build.yaml
bazel/: libuv.BUILD  uvw.BUILD
example/absl/: BUILD  string_view_test.cc
example/asio/: BUILD  asio_test.cc
example/basic/: BUILD  lambda.cc  rvo.cc  syntax.cc  template.cc
example/builtin/: BUILD  choose_expr_test.cc
example/c/: BUILD  demo.c
example/common/: BUILD  type_name.h
example/const/: BUILD  const_test.cc
example/fmt/: BUILD  fmt_test.cc
example/glog/: BUILD  log_test.cc
example/gtest/: BUILD
example/protobuf/: BUILD  thing.proto
example/uv/: BUILD  uv_test.cc
example/uvw/: BUILD  uvw_test.cc
snippets/: BUILD  kfifo.h  kfifo_unittests.cc
tutorial/: BUILD  container_unittests.cc
