module(
    name = "cpp-project-starter",
    version = "0.0.1",
)

bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "abseil-cpp", version = "20230802.0")
bazel_dep(name = "google_benchmark", version = "1.8.3")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.6.0")
bazel_dep(name = "grpc", version = "1.48.1")
bazel_dep(name = "rules_go", version = "0.44.2")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0-alpha2")
bazel_dep(name = "protobuf", version = "23.1")
bazel_dep(name = "rules_proto", version = "6.0.0-rc1")
bazel_dep(name = "fmt", version = "10.2.1")
bazel_dep(name = "asio", version = "1.28.2")
bazel_dep(name = "nlohmann_json", version = "3.11.3")