module(
    name = "cpp-project-starter",
    version = "0.0.1",
)

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "abseil-cpp", version = "20240116.0")
bazel_dep(name = "google_benchmark", version = "1.8.3")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "grpc", version = "1.48.1")
bazel_dep(name = "rules_go", version = "0.44.2")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0-alpha2")
bazel_dep(name = "protobuf", version = "23.1")
bazel_dep(name = "rules_proto", version = "6.0.0-rc1")
bazel_dep(name = "fmt", version = "10.2.1")
bazel_dep(name = "asio", version = "1.28.2")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "tcmalloc", version = "0.0.0-20240411-5ed309d")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)